RESOLVED FIXED36275
CSS3 :not selector with :first-letter selector test fails
https://bugs.webkit.org/show_bug.cgi?id=36275
Summary CSS3 :not selector with :first-letter selector test fails
Simon Fraser (smfr)
Reported 2010-03-17 20:20:54 PDT
Attachments
Testcase (1.75 KB, text/html)
2010-03-17 20:20 PDT, Simon Fraser (smfr)
no flags
Patch (4.69 KB, patch)
2010-03-18 13:34 PDT, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2010-03-18 13:06:17 PDT
I have a fix for this.
Dave Hyatt
Comment 2 2010-03-18 13:34:59 PDT
Simon Fraser (smfr)
Comment 3 2010-03-18 13:36:48 PDT
Comment on attachment 51084 [details] Patch > Property changes on: LayoutTests/fast/css/invalid-not-with-pseudo-element.html > ___________________________________________________________________ > Added: allow-tabs > + true Did you want this? r=me
Dave Hyatt
Comment 4 2010-03-18 13:37:58 PDT
Fixed in r56187.
Note You need to log in before you can comment on or make changes to this bug.