https://bugs.webkit.org/show_bug.cgi?id=36275

Reviewed by Simon Fraser.

Make sure :not does not allow pseudo-elements inside it. (Hooray for another pointless
restriction on :not.)

Added fast/css/invalid-not-with-pseudo-element.html

* css/CSSGrammar.y:
* css/CSSSelector.h:
(WebCore::CSSSelector::matchesPseudoElement):



Canonical link: https://commits.webkit.org/47481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56187 268f45cc-cd09-0410-ab3c-d52691b4dbfc