WebCore/css/CSSGrammar.y
@@ -1165,7 +1165,7 @@ pseudo:
     }
     // used by :not
     | ':' NOTFUNCTION maybe_space simple_selector maybe_space ')' {
-        if (!$4 || $4->simpleSelector() || $4->tagHistory())
+        if (!$4 || $4->simpleSelector() || $4->tagHistory() || $4->matchesPseudoElement())
             $$ = 0;
         else {
             CSSParser* p = static_cast<CSSParser*>(parser);
